--- a/src/FizzyLogic/Pages/Admin/_Host.cshtml
+++ b/src/FizzyLogic/Pages/Admin/_Host.cshtml
@@ -1,4 +1,5 @@
-﻿@page
+﻿@page "/Admin/{**segment}"
+
 @attribute [Authorize]
 @using FizzyLogic.AdminPanel
 @model FizzyLogic.Pages.Admin.IndexPageModel
