feat: Add content to the about page

--- a/src/FizzyLogic/Pages/About.cshtml
+++ b/src/FizzyLogic/Pages/About.cshtml
@@ -5,9 +5,56 @@
 }
 
 <div class="container">
-    <div class="row">
-        <div class="col">
-            <h1>About</h1>
+    <div class="row justify-content-center">
+        <div class="col-auto">
+            <img width="150" height="150" src="/content/images/common/profile.png" class="rounded-circle">
+
+            </img>
+
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-auto">
+            <h1>About me</h1>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-auto">
+            <ul class="list-inline list-contact-options">
+                <li class="list-inline-item"><a href="https://twitter.com/willem_meints"><i class="fab fa-twitter"></i> Twitter</a></li>
+                <li class="list-inline-item"><a href="https://www.linkedin.com/in/wmeints/"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+                <li class="list-inline-item"><a href="https://github.com/wmeints/"><i class="fab fa-github"></i> Github</a></li>
+            </ul>
+        </div>
+        </div>
+    <div class="row justify-content-center">
+        <div class="col-9">
+            <p>
+                Hi, I’m Willem Meints. I’m a software architect and technology advocate at Info Support. 
+                I mostly work on AI projects and love to write about the stuff that I do with machine learning. 
+                But that’s not all I do, I have a long running career in software development with various programming 
+                languages such as Java, C#, and Python.
+            </p>
+            <p>
+                I’m the author of the book "Deep learning with Microsoft Cognitive Toolkit quick start guide". 
+                I wrote the book mostly for fun and because I wanted to learn about writing a book. 
+                But it’s definitely a good read when you want to learn about CNTK and deep learning.
+            </p>
+            <p>
+                Since 2018, I've been part of the Global AI Community and now running it with a group of friends
+                that I met in the community. As part of this work and other things I've been doing in the community
+                in the past 5 years I've received 5 MVP awards from Microsoft.
+            </p>
+            <p>
+                My background is in software engineering so I’m not a traditional data science person. 
+                I like to combine my knowledge of DevOps and data science to bring models to production in a sensible way.
+            </p>
+            <p>
+                I studied electronics but quickly discovered I had more fun building software rather than soldering 
+                circuit boards. This led to my decision to leave the world of electronics and find a career in 
+                software engineering. After I finished my bachelor in software engineering I started working for 
+                Info Support where I’ve been working ever since.
+            </p>
         </div>
     </div>
 </div>
