--- a/src/FizzyLogic/Pages/_ViewImports.cshtml
+++ b/src/FizzyLogic/Pages/_ViewImports.cshtml
@@ -1,8 +1,9 @@
 @namespace FizzyLogic.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, FizzyLogic
-@using Microsoft.AspNetCore.Identity;
-@using Microsoft.AspNetCore.Authorization;
+@using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Authorization
 @using FizzyLogic.Models
 @using FizzyLogic.Data
 @using FizzyLogic.Forms
+@using FizzyLogic.Services
