Add icons for info + warning blocks

--- a/src/FizzyLogic/Pages/Article.cshtml
+++ b/src/FizzyLogic/Pages/Article.cshtml
@@ -18,7 +18,7 @@
         <meta property="twitter:image" value="@Model.Article.FeaturedImage">
     }
     <meta property="twitter:card" value="summary_large_image"/>
-    <meta property="twitter:site" value="@willem_meints"/>
+    <meta property="twitter:site" value="@@willem_meints"/>
     <meta property="og:site_name" content="Willem's Fizzy Logic">
 }
 <div class="container">
