fix: Improve graph metadata rendering

--- a/src/FizzyLogic/Pages/Article.cshtml
+++ b/src/FizzyLogic/Pages/Article.cshtml
@@ -20,6 +20,9 @@
     <meta property="twitter:card" value="summary_large_image"/>
     <meta property="twitter:site" value="@@willem_meints"/>
     <meta property="og:site_name" content="Willem's Fizzy Logic">
+    <meta property="og:type" value="article"/>
+    <meta name="twitter:label1" value="Written by"/>
+    <meta name="twitter:data1" value="Willem Meints"/>
 }
 <div class="container">
     @if(!string.IsNullOrEmpty(Model.Article.FeaturedImage))
