Add responsive image sizes to cards

--- a/src/FizzyLogic/Pages/Shared/_ArticleCard.cshtml
+++ b/src/FizzyLogic/Pages/Shared/_ArticleCard.cshtml
@@ -1,12 +1,29 @@
-﻿@model Article 
+﻿@model Article
 @{
     var article = Model;
+}
+@functions{
+    string ImageSizeSet(string imageSource)
+    {
+        var targetSizes = new[] {
+            966, 514
+        };
+
+        var images = targetSizes.Select(x => {
+            var name = System.IO.Path.GetFileNameWithoutExtension(imageSource);
+            var extension = System.IO.Path.GetExtension(imageSource);
+
+            return $"url('{name}-w{x}{extension}')"; 
+        }).Concat(new [] { imageSource});
+
+        return $"image-set({string.Join(' ', images)});";
+    }
 }
 <div class="col article-card-container">
     <div class="card article-card h-100 border-light shadow-sm">
         @if(!string.IsNullOrEmpty(Model.FeaturedImage))
         {
-            <div src="@Model.FeaturedImage" alt="" class="card-img-top" style="height: 250px; background-image: url('@(Model.FeaturedImage)'); background-size: cover; background-position: center">
+            <div src="@Model.FeaturedImage" alt="" class="card-img-top" style="height: 250px; background-image: @ImageSizeSet(Model.FeaturedImage); background-size: cover; background-position: center">
 
             </div>
             <article class="card-body">
