--- a/src/FizzyLogic/Pages/Article.cshtml
+++ b/src/FizzyLogic/Pages/Article.cshtml
@@ -28,13 +28,13 @@
     @if(!string.IsNullOrEmpty(Model.Article.FeaturedImage))
     {
         <div class="row mb-4 justify-content-center">
-            <div class="col-9">
+            <div class="col-12 col-md-9">
                 <div class="header-image rounded-3" style="background-image: url('@Model.Article.FeaturedImage');"></div>
             </div>
         </div>
     }
     <div class="row justify-content-center">
-        <div class="col-7">
+        <div class="col-12 col-md-7">
             <article>
                 <header>
                     <div class="row">
@@ -60,7 +60,7 @@
         </div>
     </div>
     <div class="row justify-content-center mt-4">
-        <div class="col-7">
+        <div class="col-12 col-md-7">
             <div id="disqus_thread"></div>
             <script>
                 var disqus_config = function () {
